--- a/CSS/edit.css
+++ b/CSS/edit.css
@@ -29,7 +29,7 @@
 
 .edit-button{
     position: relative;
-    bottom: 120px;
+    bottom: 80px;
     left:155px;
     width: 22%;
 }
@@ -67,17 +67,19 @@
     padding-top:5px;
     font-weight: bold;
     margin-bottom: 8px;
+    border-top: 1px solid #000;
 }
 
 .desc {
     padding-left:10px;
     padding-top:5px;
     margin-top: 8px;
+    margin: 0px;
 }
 
 .cost {
-    border-top: 1px solid #000;
     padding-left:10px;
     padding-top:5px;
     font-weight: bold;
+    margin: 0px;
 }
