--- a/CSS/edit.css
+++ b/CSS/edit.css
@@ -29,7 +29,7 @@
 
 .edit-button{
     position: relative;
-    bottom: 80px;
+    bottom: 54px;
     left:155px;
     width: 22%;
 }
@@ -49,10 +49,11 @@
     margin: 20px;
 }
 .thumb {
-    width: 100px;
+    width: 150px;
     height: 150px;
     margin: 20px auto 0;
     padding-bottom: 20px;
+    overflow: hidden;
 }
 
 .thumb img {
@@ -74,12 +75,16 @@
     padding-left:10px;
     padding-top:5px;
     margin-top: 8px;
-    margin: 0px;
+    margin-bottom: 0px;
+    font-weight: bold;
+    font-size: 20px;
+    line-height: 20px;
 }
 
 .cost {
     padding-left:10px;
-    padding-top:5px;
+    /* padding-top:5px; */
     font-weight: bold;
     margin: 0px;
+    line-height: 20px;
 }
