--- a/CSS/style.css
+++ b/CSS/style.css
@@ -18,3 +18,27 @@ h1 {
     text-align: center;
     font-size: 50px;
 }
+
+.back-button:hover {
+    background-color: lightgrey;
+}
+
+.back-button p {
+    margin: 0px;
+    padding-top: 2px;
+}
+
+.back-button {
+    float: left;
+    width: 120px;
+    margin-right: 100px;
+    margin-left: 20px;
+    border: 1px solid #000;
+    border-radius: 15px;
+    font-size: 18px;
+    cursor: pointer;
+    text-align: center;
+    height: 30px;
+    position: absolute;
+    top: 20px;
+}
